edded or edited insede lang/public/app nearly all files
